# ajiva-webgpu

./: .gitignore  README.MD
src/: CMakeLists.txt
src/Engine/: CMakeLists.txt
src/Engine/src/: Application.cpp  Application.h  defines.h  implementations.cpp  library.cpp  library.h
src/Engine/src/Core/: Clock.cpp  Clock.h  EventSystem.cpp  EventSystem.h  Layer.cpp  Layer.h  Logger.cpp  Logger.h  ThreadPool.cpp  ThreadPool.h
src/Engine/src/Platform/: PlatformSystem.cpp  PlatformSystem.h  Window.cpp  Window.h
src/Engine/src/Renderer/: BindGroupBuilder.cpp  BindGroupBuilder.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  GpuContext.cpp  GpuContext.h  GpuContext.hpp  GraphicsResourceManager.cpp  GraphicsResourceManager.h  ImGuiLayer.cpp  ImGuiLayer.h  Model.cpp  Model.h  RenderPipelineLayer.cpp  RenderPipelineLayer.h  Renderer.cpp  Renderer.h  Structures.h  Texture.cpp  Texture.h
src/Engine/src/Renderer/PBR/: Material.cpp  Material.h  RenderPipeline.cpp  RenderPipeline.h
src/Engine/src/Resource/: .gitignore  FileNames.cmake  Loader.cpp  Loader.h  ResourceManager.h  tiny_obj_loader.h
src/LearnWebGPU/: CMakeLists.txt  GpuContext.hpp  Window.hpp  main.cpp
src/LearnWebGPU/resources/: shader.wgsl
src/TestBed/: Application.cpp  Application.h  CMakeLists.txt  GameOfLife.cpp  GameOfLife.h  main.cpp
src/libs/: imgui.cmake
src/libs/imgui/: CMakeLists.txt
src/resources/: gol-texture.wgsl  gol.wgsl  pbr_shader.wgsl  shader.wgsl
